jump test; avoid obstacle!

--- a/src/components/obstacles/obstacle.scss
+++ b/src/components/obstacles/obstacle.scss
@@ -1,10 +1,11 @@
 .obstacle {
   position: absolute;
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   background-color: red;
   right: -50vw;
-  animation: moveLeft 4s linear 1;
+  bottom: 0;
+  animation: moveLeft 6s linear 1;
 
   &.paused {
     animation-play-state: paused;
