--- a/src/components/player/player.scss
+++ b/src/components/player/player.scss
@@ -17,7 +17,7 @@
     transform: translate3d(0, 0, 0);
   }
   50% {
-    transform: translate3d(0, -200px, 0);
+    transform: translate3d(0, -400px, 0);
   }
   100% {
     transform: translate3d(0, 0, 0);
